Created admin dashboard with category managment unit

--- a/src/app/admin-dashboard/add-category/add-category.component.html
+++ b/src/app/admin-dashboard/add-category/add-category.component.html
@@ -1,4 +1,7 @@
 <div class="form-container">
+  <button class="cancel-icon" (click)="cancel()">
+    <i class="bi bi-x-circle"></i>
+  </button>
   <form [formGroup]="categoryForm" (ngSubmit)="onSubmit()">
     <div>
       <label for="categoryName">Category Name</label>
