--- a/src/app/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/admin-dashboard/admin-dashboard.component.html
@@ -1,7 +1,7 @@
 <mat-drawer-container class="example-container">
   <mat-drawer mode="side" opened>
-    <div class="nav-link" [routerLink]="['add-category']">Add Category</div>
-    <div class="nav-link" [routerLink]="['add-products']">Add Product</div>
+    <div class="nav-link" [routerLink]="['category-management']">Category Management</div>
+    <div class="nav-link" [routerLink]="['product-management']">Product Management</div>
   </mat-drawer>
   <mat-drawer-content>
     <router-outlet></router-outlet>
