--- a/src/app/admin-dashboard/add-product/add-product.component.css
+++ b/src/app/admin-dashboard/add-product/add-product.component.css
@@ -27,6 +27,18 @@ form label {
   font-family: Arial, sans-serif;
 }
 
+
+.cancel-icon {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background: none;
+  border: none;
+  color: #dd1b28;
+  font-size: 1.5em;
+  cursor: pointer;
+}
+
 /* Error message styling */
 .error-message {
   color: red;
