--- a/src/app/admin-dashboard/add-product/add-product.component.html
+++ b/src/app/admin-dashboard/add-product/add-product.component.html
@@ -1,3 +1,6 @@
+<button class="cancel-icon" (click)="cancel()">
+  <i class="bi bi-x-circle"></i>
+</button>
 <form [formGroup]="productForm" (ngSubmit)="onSubmit()">
   <div class="form-group">
     <label>Product Name:</label>
@@ -38,13 +41,13 @@
     </div>
   </div>
 
-  <!-- <div class="form-group">
+  <div class="form-group">
     <label>Product Image:</label>
-    <input type="file" (change)="onFileSelect($event)" />
+    <!-- <input type="file" (change)="onFileSelect($event)" /> -->
     <div *ngIf="productForm.controls['productImage'].invalid && productForm.controls['productImage'].touched" class="error-message">
       Product Image is required.
     </div>
-  </div> -->
+  </div>
 
-  <button type="submit" [disabled]="productForm.invalid">Submit</button>
+  <button type="submit" [disabled]="productForm.invalid">{{isEditMode? 'Update':'Submit'}}</button>
 </form>
