Add Cart functionality Implemented

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,21 +1,26 @@
 <header>
-    <nav class="navbar">
-      <div class="logo">
-        <a href="/">
-          <img src="\logo.jpg" alt="E-Commerce Logo" />
-        </a>
-      </div>
-      <ul class="nav-links">
-        <li><a href="/home">Home</a></li>
-        <li><a href="/shop">Shop</a></li>
-        <li><a href="/about">About</a></li>
-        <li><a href="/contact">Contact</a></li>
-      </ul>
-      <div class="actions">
-        <a href="/cart" class="cart-link">
-          <i class="fas fa-shopping-cart"></i> Cart
-        </a>
-        <a href="/login" class="login-button">Login</a>
-      </div>
-    </nav>
+  <nav class="navbar">
+    <div class="logo">
+      <a href="/">
+        <img src="\logo.jpg" alt="E-Commerce Logo" />
+      </a>
+    </div>
+    <ul class="nav-links">
+      <li><a href="/home">Home</a></li>
+      <li><a href="/shop">Shop</a></li>
+      <li><a href="/about">About</a></li>
+      <li><a href="/contact">Contact</a></li>
+    </ul>
+    <div class="actions">
+      <!-- <a href="/cart" class="cart-link">
+        <i class="fas fa-shopping-cart"></i> Cart
+      </a> -->
+
+      <button routerLink="cart" class="btn btn-primary" (click)="navigateToCart()">
+        <i style="font-size: 30px;" class="fas fa-cart-plus"></i>
+        <div style="font-size: 10px;" class="badge bg-danger">{{totalCountOfCartProducts}}</div>
+    </button>
+      <!-- <a href="/login" class="login-button">Login</a> -->
+    </div>
+  </nav>
 </header>    
