--- a/src/app/add-to-cart/add-to-cart.component.html
+++ b/src/app/add-to-cart/add-to-cart.component.html
@@ -9,6 +9,7 @@
                 <th>ProductName</th>
                 <th>Product Descripation</th>
                 <th>Product Price</th>
+                <th>Product image</th>
                 <th>Product Category</th>
                 <th>Total</th>
                 <th>Quantity</th>
@@ -21,6 +22,7 @@
                 <td>{{product.name}}</td>
                 <td>{{product.description}}</td>
                 <td>{{product.price}}</td>
+                <td><img [src]="product.imageUrl" height="100px" width="100px"></td>
                 <td>{{product.category.categoryName}}</td>
                 <td>{{product.total}}</td>
                 <td>{{product.quantity}}</td>
