--- a/src/app/header/login/login.component.html
+++ b/src/app/header/login/login.component.html
@@ -1,16 +1,25 @@
 <div class="container">
-<div class="card" style="width: 25rem; margin: 90px; padding: 20px;">
-    <form #loginForm="ngForm" (ngSubmit)="login()">
-      <div class="mb-3">
-        <input class="form-control" placeholder="Username" name="username" [(ngModel)]="model.username">
+  <div class="card" style="width: 25rem; padding: 20px;">
+    <h2 class="text-center">Login</h2>
+    <form [formGroup]="loginForm">
+      <div class="form-group mb-3">
+        <label for="userName">Username</label>
+        <input id="userName" formControlName="userName" class="form-control" />
+        <div *ngIf="loginForm.controls['userName'].invalid && loginForm.controls['userName'].touched" class="text-danger">
+          Username is required
+        </div>
       </div>
-      <div class="mb-3">
-        <input class="form-control" placeholder="Password" type="password" name="password" [(ngModel)]="model.password">
+      <div class="form-group mb-3">
+        <label for="password">Password</label>
+        <input id="password" type="password" formControlName="password" class="form-control" />
+        <div *ngIf="loginForm.controls['password'].invalid && loginForm.controls['password'].touched" class="text-danger">
+          Password is required
+        </div>
       </div>
-      <button class="btn btn-outline-success" type="submit">Login</button>
+      <button type="submit" class="btn btn-primary btn-block" [disabled]="loginForm.invalid" (click)="onSubmit()">Login</button>
+      <div class="mt-3 text-center">
+        <p>If you are not a user, please <a href="signup">sign up</a>.</p>
+      </div>
     </form>
-    <div class="mt-3">
-      <p>If you are not a user, please <a href="signup">sign up</a>.</p>
-    </div>
   </div>
-</div> 
+</div>
