--- a/src/app/add-to-cart/add-to-cart.component.html
+++ b/src/app/add-to-cart/add-to-cart.component.html
@@ -51,7 +51,7 @@
         <img src="https://rukminim1.flixcart.com/www/800/800/promos/16/05/2019/d438a32e-765a-4d8b-b4a6-520b560971e8.png?q=90" alt="">
       <h4>Your cart is empty!</h4>
       <h6>Add item to it now</h6>
-      <!-- <button class="btn btn-primary" (click)="navigateToOtherPage()">Shop Now</button> -->
+      <button class="btn btn-primary" (click)="navigateToOtherPage()">Shop Now</button>
    
       </div>
     </div>
