--- a/src/app/add-to-cart/add-to-cart.component.html
+++ b/src/app/add-to-cart/add-to-cart.component.html
@@ -31,8 +31,8 @@
               <tr>
                 <td colspan="4"></td>
                 <td><button (click)="emptyCart()" class="btn btn-danger">Empty Cart</button></td>
-                <!-- <td><button (click)="navigateToOtherPage()" class="btn btn-primary">Shop More</button></td> -->
-                <!-- <td><button class="btn btn-success">Checkout</button></td> -->
+                <td><button (click)="navigateToOtherPage()" class="btn btn-primary">Shop More</button></td>
+                <td><button class="btn btn-success">Checkout</button></td>
                 <td><strong>Grand Total:{{grandTotal}}</strong></td>
               </tr>
             </tbody>
